# bscwave

./: .gitignore  README.md  bscwave.cabal
app/: GenPorts.hs
csrc/: bsim_wrapper.cxx
examples/counter-tb/: .gitignore  build.sh  cabal.project  counter-tb.cabal
examples/counter-tb/app/: Main.hs  MkCounter.hs
examples/counter-tb/src/: Counter.bsv
src/Bscwave/: FFI.hs  Interface.hs  Render.hs  Sim.hs  Waveform.hs
